# serious-serialization-library

./: .gitignore  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
extensions/: CMakeLists.txt
extensions/nlohmann_json/: CMakeLists.txt
extensions/nlohmann_json/include/sl/srlz/ext/: nlohmann_json.hpp
extensions/nlohmann_json/test/: CMakeLists.txt
extensions/nlohmann_json/test/src/: from_test.cpp  to_test.cpp
extensions/protobuf/: CMakeLists.txt
extensions/protobuf/include/sl/srlz/ext/: protobuf.hpp
extensions/protobuf/test/: CMakeLists.txt
extensions/protobuf/test/src/: fixtures.hpp  from_test.cpp  test_struct.proto  to_test.cpp
include/sl/: srlz.hpp
include/sl/srlz/: field.hpp  from.hpp  to.hpp
test/: CMakeLists.txt
test/src/: field_test.cpp  to_test.cpp
